# django-post_office

./: .gitignore  pyproject.toml  setup.py
.github/workflows/: codeartifact.yml  test.yml
post_office/: admin.py  apps.py  backends.py  lockfile.py  mail.py  models.py  tasks.py  utils.py
post_office/management/commands/: send_queued_mail.py
post_office/migrations/: 0012_auto_20221115_0850.py  0013_auto_20221115_1151.py  0014_auto_20221115_1155.py
post_office/templatetags/: post_office.py
